fix secret buttons and easter egg

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Dawid Perkowski's rsme Terminal</title>
+  <title>Resume Terminal</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body { margin: 0; padding: 0; background-color: black; color: #0f0; font-family: "Courier New", Courier, monospace; overflow: hidden; }
@@ -68,8 +68,6 @@
         <button data-cmd="rsme -ce">rsme -ce</button>
         <button data-cmd="rsme -ad">rsme -ad</button>
         <button data-cmd="rsme -ct">rsme -ct</button>
-        <button data-cmd="pokemon">pokemon</button>
-        <button data-cmd="rr">rr</button>
         <button data-cmd="cl">cl</button>
       </div>
     </div>
