--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ Certifications:
 ● MSSA Microsoft Software Systems Academy
 
 Education:
-Microsoft - Software and Systems Academy (MSSA) Trainee`;
+Microsoft - Software and Systems Academy (MSSA)`;
     const resumeAdditional = `ADDITIONAL INFORMATION
 Volunteer work: Firefighter at Exeter Township Fire Station (June 2014 – March 2015); 
 Equestrian volunteer at Cloverleaf Equine Center Nonprofit, Equestrian Therapy for Disabled Children (June 2020 – Present).
