--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <div class="line">
         Resume Terminal for<span class="">: <span class="underline , flash">Dawid Perkowski</span>
       </div>      
-      <div class="line">Type a command below.</div>
+      <div class="line">Type a command below:</div>
       <br>
       <div id="output"></div>
       <div class="input-line">
